fix spacing

--- a/css/style.css
+++ b/css/style.css
@@ -69,7 +69,7 @@
   float: left;
   height: 19em;
   width: 33%;
-  margin-left: 50px;
+  margin-left: 60px;
   margin-right: -100px;
   padding:10px;
 }
@@ -78,7 +78,7 @@
   float: left;
   height: 19em;
   width: 33%;
-  margin-right: 30px;
+  margin-right: 50px;
   padding:10px;
 }
 
